--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,13 @@
 ul.nav li {
-    padding-right:10px;
+    padding-right:20px;
+}
+fa-icon {
+    display: inline;
+}
+
+ a.nav-link{
+    display:inline;
+    width: 125px;
 }
 
 footer{
