Defines a register component, and adds an angular route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="content" hidden>
   App
 </div>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav  *ngIf="shouldIBeDisplayed()" class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container">
     <a class="navbar-brand" href="#">SimpliLearn Admin Dashboard</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul *ngIf="shouldIBeDisplayed()" class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li  class="nav-item" *ngFor="let item of navigation">
           <fa-icon [icon]="item.icon">&nbsp;</fa-icon>
           <a class="nav-link" [routerLink]="item.path">&nbsp;{{item.label}}</a>
