Setup cucumber as the test runner, and adds an integration test targeting the login feature

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,4 +28,5 @@
         Don't have an account? &nbsp; <a [routerLink]="'/register'">Create Account</a>
     </span>
 </form>
+<app-dashboard></app-dashboard>
 
